--- a/views/console_booking_configuration.erb
+++ b/views/console_booking_configuration.erb
@@ -15,4 +15,19 @@
       <p class="centered_text"><a href="/admin/booking/config/templates"><%=t.booking_console_configuration.templates%></a></p>
     </div>
   </div>   
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-1" style="padding: 3em">
+      <p class="centered_text"><a href="/admin/rates/season-defs"><%=t.rates_console.seasons%></a></p>
+    </div>
+  </div>
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/rates/factor-defs"><%=t.rates_console.factors%></a></p>
+    </div>     
+  </div>  
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>
+    </div>
+  </div>       
 </div>
