--- a/views/console_booking_configuration_templates.erb
+++ b/views/console_booking_configuration_templates.erb
@@ -25,7 +25,7 @@
 <h3 class="top-margin-1line bottom-border-solid"><%=t.booking_configuration_templates.emails%></h3>
 <div class="container_12">
   <div class="grid_6">
-    <h4><%=t.booking_configuration_templates.customer_emails%></h4>  
+    <h4 class="guiblock centered_text"><%=t.booking_configuration_templates.customer_emails%></h4>  
     <table class="table" style="background:none">
       <thead class="table-header-title" style="background:none">
         <tr class="table-row" style="background:none">
@@ -50,7 +50,7 @@
     </table>   
   </div>  
   <div class="grid_6">
-    <h4><%=t.booking_configuration_templates.manager_emails%></h4>  
+    <h4 class="guiblock centered_text left-margin"><%=t.booking_configuration_templates.manager_emails%></h4>  
     <table class="table" style="background:none">
       <thead class="table-header-title" style="background:none">
         <tr class="table-row" style="background:none">
