--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -30,10 +30,10 @@
     <div id="content-body" class="element-form-detail bottom-margin">
 
       <!-- ITEM SELECTION TAB -->
+      <% if booking_reservation_starts_with == :dates %>
 	  <div id="item-selection" class="bottom-margin">
 		  <form id="form-search-item" name="form-search-item" class="guiblock">
 		    <div class="container_12">
-
 		      <div class="grid_4">
 		      <div class="formrow">
 		      	<label for="datefrom" id="labeldatefrom" class="fieldtitle">
@@ -170,6 +170,155 @@
 		  </form>
 		  <div id="result" class="top-separator">
 		  </div>
+
+		<% else %>
+
+	      <div id="item-selection" class="bottom-margin">
+          
+            <div id="items_families" class="container_12">
+            </div>
+
+            <form id="family-selection" name="family-selection" style="display:none">
+              <div id="items_dates" class="container_12">
+                <div class="top-margin-1line top-space top-border-nosolid">
+                  <div class="grid_4">
+		            <div class="formrow">
+		      	      <label for="datefrom" id="labeldatefrom" class="fieldtitle">
+		      		  <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
+		      	      </label> 
+		      	      <input type="text" name="datefrom" id="datefrom" class="date_control" size="10" maxlength="10"/>
+		      	      <% if booking_item_family.time_to_from %>
+		      	      <select name="timefrom" id="timefrom"> 
+					    <option value="7:00" selected="selected">7:00</option>
+					    <option value="7:30">7:30</option>
+					    <option value="8:00">8:00</option>
+					    <option value="8:30">8:30</option>
+					    <option value="9:00">9:00</option>
+					    <option value="9:30">9:30</option>
+					    <option value="10:00">10:00</option>
+					    <option value="10:30">10:30</option>
+					    <option value="11:00">11:00</option>
+					    <option value="11:30">11:30</option>
+					    <option value="12:00">12:00</option>
+					    <option value="12:30">12:30</option>
+					    <option value="13:00">13:00</option>
+					    <option value="13:30">13:30</option>
+					    <option value="14:00">14:00</option>
+				  	    <option value="14:30">14:30</option>
+					    <option value="15:00">15:00</option>
+					    <option value="15:30">15:30</option>
+					    <option value="16:00">16:00</option>
+					    <option value="16:30">16:30</option>
+					    <option value="17:00">17:00</option>
+					    <option value="17:30">17:30</option>
+					    <option value="18:00">18:00</option>
+					    <option value="18:30">18:30</option>
+					    <option value="19:00">19:00</option>
+					    <option value="19:30">19:30</option>
+					    <option value="20:00">20:00</option>
+					    <option value="20:30">20:30</option>
+					    <option value="21:00">21:00</option>
+					    <option value="21:30">21:30</option>
+					    <option value="22:00">22:00</option>
+					    <option value="22:30">22:30</option>
+					    <option value="23:00">23:00</option>
+					    <option value="23:30">23:30</option>
+		      	      </select>
+                      <% end %>
+		            </div>
+                    <% if booking_item_family.pickup_return_place %>
+		            <div class="formrow">
+	                  <div class="collection_place">
+	                    <label for="pickup_place" class="fieldtitle"><%=t.new_booking.pickup_place%></label>
+	                    <select name="pickup_place" class="fieldcontrol" id="pickup_place">
+	                    </select>
+	                  </div>
+	                  <div id="other_pickup_place" style="display:none;">
+	                    <span class="columna1">&nbsp;</span>
+	                    <input type="text" name="pickup_place_other" id="pickup_place_other" maxlength="80" size="28"  placeholder="<%=t.new_booking.pickup_place%>"/>
+	                  </div>
+	                  <input type="hidden" name="pickup_place_value" id="pickup_place_value"/>
+	                </div>          		      	
+	                <% end %>	  		      
+	              </div>
+	              <div class="grid_4">      
+		            <div class="formrow">
+		      	      <label for="dateto" id="labeldatefrom" class="fieldtitle">
+		      	         <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure_date):(t.new_booking.return_date)%>
+		      	      </label> 
+		      	      <input type="text" name="dateto" id="dateto" class="date_control" size="10" maxlength="10"/>
+		      	      <% if booking_item_family.time_to_from %>
+		      	      <select name="timeto" id="timeto"> 
+					    <option value="7:00" selected="selected">7:00</option>
+					    <option value="7:30">7:30</option>
+					    <option value="8:00">8:00</option>
+					    <option value="8:30">8:30</option>
+					    <option value="9:00">9:00</option>
+					    <option value="9:30">9:30</option>
+					    <option value="10:00">10:00</option>
+					    <option value="10:30">10:30</option>
+					    <option value="11:00">11:00</option>
+					    <option value="11:30">11:30</option>
+					    <option value="12:00">12:00</option>
+					    <option value="12:30">12:30</option>
+					    <option value="13:00">13:00</option>
+					    <option value="13:30">13:30</option>
+					    <option value="14:00">14:00</option>
+				  	    <option value="14:30">14:30</option>
+					    <option value="15:00">15:00</option>
+					    <option value="15:30">15:30</option>
+					    <option value="16:00">16:00</option>
+					    <option value="16:30">16:30</option>
+					    <option value="17:00">17:00</option>
+					    <option value="17:30">17:30</option>
+					    <option value="18:00">18:00</option>
+					    <option value="18:30">18:30</option>
+					    <option value="19:00">19:00</option>
+					    <option value="19:30">19:30</option>
+					    <option value="20:00">20:00</option>
+					    <option value="20:30">20:30</option>
+					    <option value="21:00">21:00</option>
+					    <option value="21:30">21:30</option>
+					    <option value="22:00">22:00</option>
+					    <option value="22:30">22:30</option>
+					    <option value="23:00">23:00</option>
+					    <option value="23:30">23:30</option>
+		      	      </select>
+                      <% end %>
+	                  <% if booking_item_family.pickup_return_place %>
+	                  <div class="formrow">
+	                    <div class="return_place">
+	                      <label for="return_place" class="fieldtitle"><%=t.new_booking.return_place%></label>
+	      	              <select name="return_place" id="return_place" class="fieldcontrol">
+	                      </select>
+                        </div>
+	                    <div id="other_return_place" style="display:none;">
+	               	      <span class="columna1">&nbsp;</span>
+	                      <input type="text" name="return_place_other" id="return_place_other" maxlength="80" size="28" placeholder="<%=t.new_booking.return_place%>"/>  
+	                    </div>
+	                    <input type="hidden" name="return_place_value" id="return_place_value"/>
+	                  </div>
+	                  <% end %>                      
+		            </div>
+                  </div>
+                  <div class="grid_4">
+                  	<div class="guiblock top-margin-2lines">
+                 	  <span id="price" class="centered_text" style="font-size:4em; display: block; margin:0 auto">60€</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="continue_families_to_extras" class="container_12">
+                <div class="top-margin-1line top-space-1line top-border-nosolid">
+                  <button id="families_to_extras" class="form-button" type="button" 
+                    style="display:block; margin: 0 auto">Continuar</button>
+                </div>
+              </div>
+            
+            </form>
+
+		<% end %>
 	  </div>
 
       <div id="other-tabs" class="bottom-margin" style="display:none">
@@ -499,6 +648,22 @@
   </div>
 
   <!-- JS TEMPLATES -->
+
+  <script type="text/tmpl" id="script_families">
+              <div class="grid_4">
+                <div id="family_<%%=category.family%>" class="family top-margin" style="padding:5px">
+                  <div>
+                    <img src="<%%=category.photo%>" style="display: block; margin: 0 auto" />
+                  </div>
+                  <div class="top-margin">
+                    <span class="centered_text" style="display: block; margin: 0 auto" ><%%=category.description%></span>
+                  </div>
+                  <div class="top-margin">
+                    <button class="select_family centered_text form-button blue-button" style="display: block; margin: 0 auto" rel="<%%=category.family%>">Seleccionar</button>
+                  </div>
+                </div>
+              </div>
+  </script>
   
   <script type="text/tmpl" id="script_extras">
   	          <tr class="booking_extra" id="booking_extra_<%%=extra.id%>" <%% if (!extra.optionalAccepted(optional)) {%> style="display:none" <%% } %> >
